--- a/campusphoto/backend/requirements.txt
+++ b/campusphoto/backend/requirements.txt
@@ -1,20 +1,42 @@
+# 基础依赖
+setuptools>=65.0.0
+wheel>=0.40.0
+
+# Web框架
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+
+# 数据库
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 alembic==1.12.1
+
+# 认证和安全
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-pillow==10.0.1
-opencv-python==4.8.1.78
-numpy==1.24.3
-pandas==2.1.4
-plotly==5.17.0
+
+# 图像处理
+pillow>=10.0.1
+opencv-python>=4.8.0
+numpy>=1.24.0
+
+# 数据处理
+pandas>=2.1.0
+plotly>=5.17.0
+
+# 配置和环境
 python-dotenv==1.0.0
-pydantic==2.5.2
-pydantic-settings==2.1.0
-boto3==1.34.0
-redis==5.0.1
-celery==5.3.4
-httpx==0.25.2
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+email-validator>=2.0.0
+
+# 云存储和缓存
+boto3>=1.34.0
+redis>=5.0.0
+
+# 异步任务
+celery>=5.3.0
+
+# HTTP客户端
+httpx>=0.25.0
