--- a/campusphoto/backend/requirements.txt
+++ b/campusphoto/backend/requirements.txt
@@ -21,6 +21,17 @@ pillow>=10.0.1
 opencv-python>=4.8.0
 numpy>=1.24.0
 
+# AI和机器学习
+scikit-learn>=1.3.0
+scipy>=1.11.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+tensorflow>=2.13.0
+torch>=2.0.0
+torchvision>=0.15.0
+transformers>=4.30.0
+Pillow>=9.5.0
+
 # 数据处理
 pandas>=2.1.0
 plotly>=5.17.0
